rnsc/test_data/integration/error/parser/type_hints/double/not_f64.rns
.class @double identifier
.super java/lang/Object
